<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mygreenfee.CreateMemberActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/whiteColor"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollv"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/AppTheme"
        app:titleTextColor="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue"
            android:gravity="center"
            android:text="@string/creationCompte_Title"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar2">

        <LinearLayout
            android:id="@+id/formulaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrayColor"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutSpinnerCivilite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerCivilite"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/whiteColor"
                    android:paddingLeft="16dp"
                    android:textColor="@color/grayColor" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_downarrow" />
            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/whiteColor"
                android:ems="10"
                android:fontFamily="@font/helveticaneue"
                android:gravity="center_vertical"
                android:hint="@string/creationCompte_Nom"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:textColorHint="@color/grayColor"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="48dp" />

            <TextView
                android:id="@+id/error_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:paddingRight="10dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/colorError" />

            <EditText
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"

                android:background="@color/whiteColor"
                android:ems="10"
                android:fontFamily="@font/helveticaneue"
                android:hint="@string/creationCompte_Prenom"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="@color/grayColor"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="48dp" />

            <TextView
                android:id="@+id/error_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:paddingRight="10dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/colorError" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/whiteColor"
                android:ems="10"
                android:fontFamily="@font/helveticaneue"
                android:hint="@string/creationCompte_Telephone"
                android:inputType="phone"
                android:paddingLeft="16dp"
                android:textColorHint="@color/grayColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/error_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:paddingRight="10dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/colorError" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/whiteColor"
                android:ems="10"
                android:fontFamily="@font/helveticaneue"
                android:hint="@string/creationCompte_Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:textColorHint="@color/grayColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/error_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:paddingRight="10dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/colorError" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/whiteColor"
                android:ems="10"
                android:fontFamily="@font/helveticaneue"
                android:hint="@string/creationCompte_Mdp"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:textColorHint="@color/grayColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/error_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:paddingRight="10dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/colorError" />

            <EditText
                android:id="@+id/passwordconfirmation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/whiteColor"
                android:ems="10"
                android:fontFamily="@font/helveticaneue"
                android:hint="@string/creationCompte_Confirmationmdp"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:textColorHint="@color/grayColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/error_mdpc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:paddingRight="10dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/colorError" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutSpinnerPays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="4dp">

                <Spinner
                    android:id="@+id/spinnerPays"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/whiteColor"
                    android:paddingLeft="16dp"
                    android:textColor="@color/grayColor" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_downarrow" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutSpinnerRegions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="453dp">

                <Spinner
                    android:id="@+id/spinnerRegions"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/whiteColor"
                    android:paddingLeft="16dp"
                    android:textColor="@color/grayColor" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_downarrow" />

            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/bithday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/whiteColor"
                android:ems="10"
                android:fontFamily="@font/helveticaneue"
                android:hint="@string/creationCompte_Birthday"
                android:inputType="date"
                android:paddingLeft="16dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonvalidation"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/greenAlbaColor"
                android:text="@string/creationCompte_Boutonvalider"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/whiteColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mentionslegales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/creationCompte_Mentions"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/cgr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/cgr"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
